[fix]#12994 remove persistant scrollbar on directory tabs

--- a/css/modules/_tabs.scss
+++ b/css/modules/_tabs.scss
@@ -27,7 +27,7 @@
     justify-content: flex-start;
     background: $white;
     margin-bottom: 30px!important;
-    overflow-x: scroll;
+    overflow-x: auto;
     @include material-card;
     >* {
         text-align: initial;
